--- a/interfaces/mysql/Makefile
+++ b/interfaces/mysql/Makefile
@@ -7,7 +7,7 @@
 #  Programer:    Kevin M. Rosenberg
 #  Date Started: Mar 2002
 #
-#  CVS Id:   $Id: Makefile,v 1.5 2002/04/03 04:54:17 kevin Exp $
+#  CVS Id:   $Id: Makefile,v 1.6 2002/04/03 17:58:23 kevin Exp $
 #
 # This file, part of CLSQL, is Copyright (c) 2002 by Kevin M. Rosenberg
 #
@@ -16,19 +16,17 @@
 # (http://opensource.franz.com/preamble.html), also known as the LLGPL.
 ###########################################################################
 
-
 # These variables are correct for GCC
 CC=gcc
 SHARED_CC_OPT=-fPIC -DPIC
-
-#SHARED_LD_OPT=-r -Bdynamic -whole-archive # For FreeBSD and Solaris (CMUCL)
-SHARED_LD_OPT=-Bshareable -Bdynamic  # For Linux (ALL) and FreeBSD (ACL)
+SHARED_LD_OPT=-shared
+LD=gcc
 
 # Use these for Sun's C compiler and Solaris (ACL)
 #CC=cc
 #SHARED_CC_OPT=-KPIC
 #SHARED_LD_OPT=-G
-
+#LD=ld
 
 # Set to the directory where you have installed mysql's library
 MYSQL_DIR=/opt/mysql
@@ -50,7 +48,7 @@ all: $(shared_lib)
 
 $(shared_lib): $(source) Makefile $(MYSQL_LIB_FILE)
 	$(CC) ${SHARED_CC_OPT} -I $(MYSQL_INCLUDE) -c $(source) -o $(object)
-	ld ${SHARED_LD_OPT} $(object) $(MYSQL_LIB_FILE) -o $(shared_lib)
+	$(LD) ${SHARED_LD_OPT} $(object) $(MYSQL_LIB_FILE) -o $(shared_lib)
 	rm $(object)
 
 clean:
