--- a/interfaces/mysql/Makefile
+++ b/interfaces/mysql/Makefile
@@ -7,7 +7,7 @@
 #  Programer:    Kevin M. Rosenberg
 #  Date Started: Mar 2002
 #
-#  CVS Id:   $Id: Makefile,v 1.6 2002/04/03 17:58:23 kevin Exp $
+#  CVS Id:   $Id: Makefile,v 1.7 2002/04/07 08:48:54 kevin Exp $
 #
 # This file, part of CLSQL, is Copyright (c) 2002 by Kevin M. Rosenberg
 #
@@ -29,10 +29,11 @@ LD=gcc
 #LD=ld
 
 # Set to the directory where you have installed mysql's library
-MYSQL_DIR=/opt/mysql
-#MYSQL_DIR=/usr
+#MYSQL_DIR=/opt/mysql
+#MYSQL_LIB=$(MYSQL_DIR)/lib/mysql
+MYSQL_DIR=/usr
+MYSQL_LIB=$(MYSQL_DIR)/lib
 
-MYSQL_LIB=$(MYSQL_DIR)/lib/mysql
 MYSQL_LIB_FILE=$(MYSQL_LIB)/libmysqlclient.so
 MYSQL_INCLUDE=$(MYSQL_DIR)/include/mysql
 
@@ -44,16 +45,17 @@ source=$(base).c
 object=$(base).o
 shared_lib=$(base).so
 
+.PHONY: all clean distclean
+
 all: $(shared_lib)
 
 $(shared_lib): $(source) Makefile $(MYSQL_LIB_FILE)
 	$(CC) ${SHARED_CC_OPT} -I $(MYSQL_INCLUDE) -c $(source) -o $(object)
 	$(LD) ${SHARED_LD_OPT} $(object) $(MYSQL_LIB_FILE) -o $(shared_lib)
-	rm $(object)
+	@rm $(object)
 
 clean:
-	rm -f $(object) $(shared_lib)
+	@rm -f $(object) $(shared_lib) *~
 
-realclean: clean
-	rm -f *~
+distclean: clean
 
