r1794: Debian docbook updates

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -5,11 +5,11 @@
 #  Programer:    Kevin M. Rosenberg
 #  Date Started: Mar 2002
 #
-#  CVS Id:   $Id: Makefile,v 1.6 2002/04/23 21:25:51 kevin Exp $
+#  CVS Id:   $Id: Makefile,v 1.7 2002/04/23 21:32:25 kevin Exp $
 #
-# This file, part of UFFI, is Copyright (c) 2002 by Kevin M. Rosenberg
+# This file, part of CLSQL, is Copyright (c) 2002 by Kevin M. Rosenberg
 #
-# UFFI users are granted the rights to distribute and use this software
+# CLSQL users are granted the rights to distribute and use this software
 # as governed by the terms of the Lisp Lesser GNU Public License
 # (http://opensource.franz.com/preamble.html), also known as the LLGPL.
 
@@ -52,7 +52,7 @@ all: html pdf ps dvi
 
 dist: html pdf
 
-CHECK=nsgmls -s -C catalog || exit 1
+CHECK=nsgmls -s -C ${CATALOG} || exit 1
 
 check:
 	$(CHECK)
@@ -61,13 +61,13 @@ html: html/book1.htm
 
 html/book1.htm: ${DOCFILES} 
 	$(CHECK)
-	( rm -rf html ; mkdir html; cd html ; jade -t sgml -c ../catalog -d ${DSSSL_HTML} ../${DOCFILE}; cd ..)
+	( rm -rf html ; mkdir html; cd html ; jade -t sgml -c ../${CATALOG} -d ${DSSSL_HTML} ../${DOCFILE}; cd ..)
 
 tex: ${TEXFILE}
 
 ${TEXFILE}: ${DOCFILES}
 	$(CHECK)
-	@jade -t tex -c catalog -d ${DSSSL_PRINT} ${DOCFILE}
+	@jade -t tex -c ${CATALOG} -d ${DSSSL_PRINT} ${DOCFILE}
 
 pdf: ${PDFFILE}
 
