r1826: *** empty log message ***

--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,14 @@
-Source: cl-uffi
+Source: cl-sql
 Section: devel
 Priority: optional
 Maintainer: Kevin Rosenberg <kevin@rosenberg.net>
 Build-Depends-Indep: debhelper (>> 3.0.0)
 Standards-Version: 3.5.2
 
-Package: cl-uffi
+Package: cl-sql
 Architecture: all
-Depends: common-lisp-controller, cmucl | lisp-compiler
-Description: Universal Foreign Function Library for Common Lisp
- UFFI provides a universal foreign function interface (FFI) for Common Lisp.
- UFFI supports CMUCL, Lispworks, and AllegroCL.
+Depends: common-lisp-controller, cl-uffi, cmucl | lisp-compiler
+Description: SQL Interface for Common Lisp
+ CLSQL uses the UFFI library to provide SQL to multiple SQL databases
+ on multiple Common Lisp implementations.
+
