--- a/debian/rules
+++ b/debian/rules
@@ -8,24 +8,43 @@ export DH_VERBOSE=1
 # This is the debhelper compatibility version to use.
 export DH_COMPAT=3
 
-pkg	:= cl-sql
-prefix	:= debian/$(pkg)
+pkg		:= cl-sql
+pkg-base	:= cl-sql-base
+pkg-mysql	:= cl-sql-mysql
+pkg-pg		:= cl-sql-postgresql
+pkg-pg-socket	:= cl-sql-postgresql-socket
+all-pkgs	:= $(pkg) $(pkg-base) $(pkg-mysql) $(pkg-pg) $(pkg-pg-socket)
+
+prefix		:= debian/$(pkg)
+prefix-base	:= debian/$(pkg-base)
+prefix-mysql	:= debian/$(pkg-mysql)
+prefix-pg	:= debian/$(pkg-pg)
+prefix-pg-socket := debian/$(pkg-pg-socket)
+
+##
+## lisp sources per pkg
+##
+srcs		:= sql/pool.cl sql/sql.cl sql/transactions.cl sql/utils.cl sql/functional.cl sql/usql.cl
+		   $(filter-out sql/metadata.lisp,$(wildcard sql/*.lisp))
+srcs-base	:= sql/package.cl sql/db-interface.cl sql/classes.cl sql/conditions.cl $(wilcard cmu-compat/*.cl)
+srcs-mysql	:= $(wildcard interfaces/mysql/*.cl)
+srcs-pg		:= $(wildcard interfaces/postgresql/*.cl)
+srcs-pg-socket	:= $(wildcard interfaces/postgresql-socket/*.cl)
 
 INSTALL	:= install
 INSTALLFLAGS	:= -g root -o root -m 0644
 INSTALLDIRFLAGS	:= -d -g root -o root -m 0755
 
-SOURCEDIR	:= $(prefix)/usr/share/common-lisp/source
-REPOSITORYDIR	:= $(prefix)/usr/share/common-lisp/repositories/clsql
-SYSDIR		:= $(prefix)/usr/share/common-lisp/systems
-DOCDIR		:= $(prefix)/usr/share/doc/cl-sql
+clc-source	:= /usr/share/common-lisp/source
+clc-repositories:= /usr/share/common-lisp/repositories/clsql
+clc-systems	:= /usr/share/common-lisp/systems
+doc-dir		:= $(prefix)/usr/share/doc/cl-sql
 
 
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-
 	touch configure-stamp
 
 
@@ -33,21 +52,14 @@ build: build-stamp
 
 build-stamp: configure-stamp 
 	dh_testdir
-
 	# Add here commands to compile the package.
-	$(MAKE) doc
-	#/usr/bin/docbook-to-man debian/clsql.sgml > cl-sql.1
-
 	touch build-stamp
 
 clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp configure-stamp
-
 	# Add here commands to clean up after the build process.
-	-$(MAKE) clean
-
 	dh_clean
 
 install: build
@@ -56,18 +68,27 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
-	# Add here commands to install the package into debian/cl-sql.
-	$(INSTALL) $(INSTALLDIRFLAGS) $(REPOSITORYDIR) $(REPOSITORYDIR)/mcl $(SYSDIR) $(DOCDIR) $(DOCDIR)/html $(SOURCEDIR)
+	# CLSQL-Base
 	$(INSTALL) $(INSTALLFLAGS) clsql.system.debian $(SYSDIR)
 	mv $(SYSDIR)/clsql.system.debian $(SYSDIR)/clsql.system
 	$(INSTALL) $(INSTALLFLAGS) $(shell echo sql/*.cl) $(REPOSITORYDIR)/sql
 	$(INSTALL) $(INSTALLFLAGS) $(shell echo src/interfaces/*.cl) $(REPOSITORYDIR)/interfaces
+
+	# Documentation
 	$(INSTALL) $(INSTALLFLAGS) doc/html/* $(DOCDIR)/html
-	cp doc/clsql.ps doc/cl-sql.ps
-	rm -f doc/cl-sql.ps.gz
-	gzip doc/cl-sql.ps
-	$(INSTALL) $(INSTALLFLAGS) doc/cl-sql.ps.gz $(DOCDIR)
-	rm -f doc/cl-sql.ps.gz
+	cp doc/clsql.pdf doc/cl-sql.pdf
+	rm -f doc/cl-sql.pdf.gz
+	gzip doc/cl-sql.pdf
+	$(INSTALL) $(INSTALLFLAGS) doc/cl-sql.pdf.gz $(DOCDIR)
+	rm -f doc/cl-sql.pdf.gz
+
+	# CLC Systems
+	$(INSTALL) $(INSTALLFLAGS) clsql.system $(prefix)/$(clc-systems)/
+	$(INSTALL) $(INSTALLFLAGS) clsql-base.system $(prefix-base)/$(clc-systems)/
+	$(INSTALL) $(INSTALLFLAGS) clsql-mysql.system $(prefix-mysql)/$(clc-systems)/
+	$(INSTALL) $(INSTALLFLAGS) clsql-postgresql.system $(prefix-pg)/$(clc-systems)/
+	$(INSTALL) $(INSTALLFLAGS) clsql-postgresql-socket.system $(prefix-pg-socket)/$(clc-systems)/
+
 
 # Build architecture-independent files here.
 binary-indep: build install
