--- a/debian/.cvsignore
+++ b/debian/.cvsignore
@@ -1,4 +1,8 @@
 cl-sql
+cl-sql-base
+cl-sql-mysql
+cl-sql-postgresql
+cl-sql-postgresql-socket
 files
-cl-sql.prerm.debhelper
-cl-sql.postinst.debhelper
+*.debhelper
+
