--- a/debian/rules
+++ b/debian/rules
@@ -84,7 +84,7 @@ install: build
 	$(INSTALL) $(INSTALLFLAGS) clsql-postgresql-socket.system $(prefix-pg-socket)/$(clc-systems)/
 
 	# Test suite
-	$(INSTALL) $(INSTALLFLAGS) test-suite/tester-clsql.cl test-suite/acl-compat-tester.cl $(prefix)/$(doc-dir)/test-suite
+	$(INSTALL) $(INSTALLFLAGS) test-suite/tester-clsql.cl test-suite/acl-compat-tester.cl $(doc-dir)/test-suite
 
 	# Documentation
 	$(INSTALL) $(INSTALLFLAGS) doc/html/* $(doc-dir)/html
