--- a/debian/rules
+++ b/debian/rules
@@ -25,6 +25,7 @@ prefix-pg-socket := debian/$(pkg-pg-socket)
 ## lisp sources per pkg
 ##
 srcs		:= sql/pool.cl sql/sql.cl sql/transactions.cl sql/utils.cl sql/functional.cl sql/usql.cl
+srcs-cmucl-compat := $(wilcard cmucl-compat/*.cl)
 srcs-base	:= sql/package.cl sql/db-interface.cl sql/classes.cl sql/conditions.cl $(wilcard cmu-compat/*.cl)
 srcs-mysql	:= $(wildcard interfaces/mysql/*.cl)
 srcs-pg		:= $(wildcard interfaces/postgresql/*.cl)
@@ -70,6 +71,7 @@ install: build
 
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-base) $(prefix-base)/$(clc-repos)/clsql
 	$(INSTALL) $(INSTALLFLAGS) $(srcs) $(prefix)/$(clc-repos)/clsql
+	$(INSTALL) $(INSTALLFLAGS) $(srcs-cmucl-compat) $(prefix)/$(clc-repos)/clsql/cmucl-compat
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-mysql) $(prefix-mysql)/$(clc-repos)/clsql/interfaces/mysql
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-pg) $(prefix-pg)/$(clc-repos)/clsql/interfaces/postgresql
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-pg-socket) $(prefix-pg-socket)/$(clc-repos)/clsql/interfaces/postgresql-socket
