--- a/debian/rules
+++ b/debian/rules
@@ -129,12 +129,12 @@ binary-arch: build install
 	dh_installdocs
 #	dh_installexamples 
 	dh_installchangelogs ChangeLog
-	dh_link -p $(pkg) ../repositories/clsql $(clc-source)/clsql
-	dh_link -p $(pkg-base) ../repositories/clsql $(clc-source)/clsql-base
-	dh_link -p $(pkg-mysql) ../repositories/clsql $(clc-source)/clsql-mysql
-	dh_link -p $(pkg-pg) ../repositories/clsql $(clc-source)/clsql-postgresql
-	dh_link -p $(pkg-pg-socket) ../repositories/clsql $(clc-source)/clsql-postgresql-socket
-	dh_link -p $(pkg-aodbc) ../repositories/clsql $(clc-source)/clsql-aodbc
+	dh_link -p $(pkg) $(clc-repos)/clsql $(clc-source)/clsql
+	dh_link -p $(pkg-base) $(clc-repos)/clsql $(clc-source)/clsql-base
+	dh_link -p $(pkg-mysql) $(clc-repos)/clsql $(clc-source)/clsql-mysql
+	dh_link -p $(pkg-pg) $(clc-repos)/clsql $(clc-source)/clsql-postgresql
+	dh_link -p $(pkg-pg-socket) $(clc-repos)/clsql $(clc-source)/clsql-postgresql-socket
+	dh_link -p $(pkg-aodbc) $(clc-repos)/clsql $(clc-source)/clsql-aodbc
 	dh_strip
 	dh_compress
 	dh_fixperms
