--- a/debian/rules
+++ b/debian/rules
@@ -24,9 +24,9 @@ prefix-pg-socket := debian/$(pkg-pg-socket)
 prefix-aodbc	:= debian/$(pkg-aodbc)
 
 ## Lisp sources
-srcs		:= sql/pool.cl sql/sql.cl sql/transactions.cl sql/utils.cl sql/functional.cl sql/usql.cl
-srcs-cmucl-compat := $(wildcard cmucl-compat/*.cl)
-srcs-base	:= sql/package.cl sql/db-interface.cl sql/classes.cl sql/conditions.cl
+srcs		:= $(wildcard sql/*.cl)
+srcs-cmucl-compat:= $(wildcard cmucl-compat/*.cl)
+srcs-base	:= $(wildcard base/*.cl)
 srcs-base-uffi	:= $(wildcard interfaces/clsql-uffi/*.cl) $(wildcard interfaces/clsql-uffi/*.so)
 srcs-mysql	:= $(wildcard interfaces/mysql/*.cl) $(wildcard interfaces/mysql/*.so)
 srcs-pg		:= $(wildcard interfaces/postgresql/*.cl)
@@ -78,14 +78,15 @@ install: build
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-cmucl-compat) $(prefix)/$(clc-repos)/clsql/cmucl-compat
 
 	# Base
-	$(INSTALL) $(INSTALLFLAGS) $(srcs-base) $(prefix-base)/$(clc-repos)/clsql/sql
+	$(INSTALL) $(INSTALLFLAGS) $(srcs-base) $(prefix-base)/$(clc-repos)/clsql/base
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-base-uffi) $(prefix-base)/$(clc-repos)/clsql/interfaces/clsql-uffi
+	chmod +x $(wildcard $(prefix-base)/$(clc-repos)/clsql/interfaces/clsql-uffi/*.so)
 
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-mysql) $(prefix-mysql)/$(clc-repos)/clsql/interfaces/mysql
+	chmod +x $(wildcard $(prefix-mysql)/$(clc-repos)/clsql/interfaces/mysql/*.so)
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-pg) $(prefix-pg)/$(clc-repos)/clsql/interfaces/postgresql
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-pg-socket) $(prefix-pg-socket)/$(clc-repos)/clsql/interfaces/postgresql-socket
 	$(INSTALL) $(INSTALLFLAGS) $(srcs-aodbc) $(prefix-aodbc)/$(clc-repos)/clsql/interfaces/aodbc
-	chmod +x `find debian -type f -name \*.so`
 
 	# CLC Systems
 	$(INSTALL) $(INSTALLFLAGS) clsql.system $(prefix)/$(clc-systems)/
