--- a/debian/rules
+++ b/debian/rules
@@ -41,7 +41,6 @@ INSTALLDIRFLAGS	:= -d -g root -o root -m 0755
 
 clc-base	:= usr/share/common-lisp
 clc-source	:= $(clc-base)/source
-clc-repos	:= $(clc-base)/repositories
 clc-systems	:= $(clc-base)/systems
 doc-dir		:= $(prefix)/usr/share/doc/cl-sql
 
@@ -76,18 +75,18 @@ install: build
 	dh_installdirs
 
 	# Main package
-	$(INSTALL) $(INSTALLFLAGS) $(srcs) $(prefix)/$(clc-repos)/clsql/sql
+	$(INSTALL) $(INSTALLFLAGS) $(srcs) $(prefix)/$(clc-source)/clsql/sql
 
 	# Base
-	$(INSTALL) $(INSTALLFLAGS) $(srcs-base) $(prefix-base)/$(clc-repos)/clsql/base
-	$(INSTALL) $(INSTALLFLAGS) $(srcs-base-uffi) $(prefix-base)/$(clc-repos)/clsql/interfaces/clsql-uffi
-	$(INSTALL) $(INSTALLEXECFLAGS) $(srcs-base-uffi-so) $(prefix-base)/$(clc-repos)/clsql/interfaces/clsql-uffi
+	$(INSTALL) $(INSTALLFLAGS) $(srcs-base) $(prefix-base)/$(clc-source)/clsql/base
+	$(INSTALL) $(INSTALLFLAGS) $(srcs-base-uffi) $(prefix-base)/$(clc-source)/clsql/interfaces/clsql-uffi
+	$(INSTALL) $(INSTALLEXECFLAGS) $(srcs-base-uffi-so) $(prefix-base)/$(clc-source)/clsql/interfaces/clsql-uffi
 
-	$(INSTALL) $(INSTALLFLAGS) $(srcs-mysql) $(prefix-mysql)/$(clc-repos)/clsql/interfaces/mysql
-	$(INSTALL) $(INSTALLEXECFLAGS) $(srcs-mysql-so) $(prefix-mysql)/$(clc-repos)/clsql/interfaces/mysql
-	$(INSTALL) $(INSTALLFLAGS) $(srcs-pg) $(prefix-pg)/$(clc-repos)/clsql/interfaces/postgresql
-	$(INSTALL) $(INSTALLFLAGS) $(srcs-pg-socket) $(prefix-pg-socket)/$(clc-repos)/clsql/interfaces/postgresql-socket
-	$(INSTALL) $(INSTALLFLAGS) $(srcs-aodbc) $(prefix-aodbc)/$(clc-repos)/clsql/interfaces/aodbc
+	$(INSTALL) $(INSTALLFLAGS) $(srcs-mysql) $(prefix-mysql)/$(clc-source)/clsql/interfaces/mysql
+	$(INSTALL) $(INSTALLEXECFLAGS) $(srcs-mysql-so) $(prefix-mysql)/$(clc-source)/clsql/interfaces/mysql
+	$(INSTALL) $(INSTALLFLAGS) $(srcs-pg) $(prefix-pg)/$(clc-source)/clsql/interfaces/postgresql
+	$(INSTALL) $(INSTALLFLAGS) $(srcs-pg-socket) $(prefix-pg-socket)/$(clc-source)/clsql/interfaces/postgresql-socket
+	$(INSTALL) $(INSTALLFLAGS) $(srcs-aodbc) $(prefix-aodbc)/$(clc-source)/clsql/interfaces/aodbc
 
 	# CLC Systems
 	$(INSTALL) $(INSTALLFLAGS) clsql.system $(prefix)/$(clc-systems)/
@@ -131,19 +130,13 @@ binary-arch: build install
 	dh_installdocs
 #	dh_installexamples 
 	dh_installchangelogs ChangeLog
-	dh_link -p $(pkg-base) $(clc-repos)/clsql $(clc-source)/clsql
-	dh_link -p $(pkg-base) $(clc-repos)/clsql $(clc-source)/clsql-base
-	dh_link -p $(pkg-mysql) $(clc-repos)/clsql $(clc-source)/clsql-mysql
-	dh_link -p $(pkg-pg) $(clc-repos)/clsql $(clc-source)/clsql-postgresql
-	dh_link -p $(pkg-pg-socket) $(clc-repos)/clsql $(clc-source)/clsql-postgresql-socket
-	dh_link -p $(pkg-aodbc) $(clc-repos)/clsql $(clc-source)/clsql-aodbc
 	dh_strip
 	dh_compress
 	dh_fixperms
 #	dh_makeshlibs
 	dh_installdeb
 #	dh_perl
-#	dh_shlibdeps
+	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
